src-03-core-crm/main/default/objects/Contact/fields/PRAC_Specialisations__c.field-meta.xml
<CustomField>
    <fullName>PRAC_Specialisations__c</fullName>
    <label>Specialisations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Addictions</fullName>
            </value>
            <value>
                <fullName>Anger Management / Violence</fullName>
            </value>
            <value>
                <fullName>Bereavement and Loss</fullName>
            </value>
            <value>
                <fullName>Children and Young People</fullName>
            </value>
            <value>
                <fullName>Couples / Marital Therapy</fullName>
            </value>
            <value>
                <fullName>Critical Incident Management</fullName>
            </value>
            <value>
                <fullName>Debt / Financial Concerns (which topics)</fullName>
            </value>
            <value>
                <fullName>Eating Disorders</fullName>
            </value>
            <value>
                <fullName>Family Therapy</fullName>
            </value>
            <value>
                <fullName>Forensic Work</fullName>
            </value>
            <value>
                <fullName>Group Work (Client)</fullName>
            </value>
            <value>
                <fullName>Learning Disabilities</fullName>
            </value>
            <value>
                <fullName>Long-term Medical Conditions</fullName>
            </value>
            <value>
                <fullName>Medically Unexplained Symptoms</fullName>
            </value>
            <value>
                <fullName>Mediation</fullName>
            </value>
            <value>
                <fullName>Psychosexual Difficulties</fullName>
            </value>
            <value>
                <fullName>Severe and Enduring Mental Illness</fullName>
            </value>
            <value>
                <fullName>Sexual Orientation / Gender Issues</fullName>
            </value>
            <value>
                <fullName>Sexual / Physical / Emotional Abuse</fullName>
            </value>
            <value>
                <fullName>Trauma</fullName>
            </value>
            <value>
                <fullName>Work Related Difficulties</fullName>
            </value>
            <value>
                <fullName>Other (please give details)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>