src-03-core-crm/main/default/objects/Contact/fields/PRAC_Supervision_Required__c.field-meta.xml
<CustomField>
    <fullName>PRAC_Supervision_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supervision Required</label>
    <type>Checkbox</type>
</CustomField>