src-03-core-crm/main/default/objects/Contact/fields/PRAC_Supervisor_Reference_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>PRAC_Supervisor_Reference_Received_Date__c</fullName>
    <label>Supervisor Reference Received Date</label>
    <type>Date</type>
</CustomField>