src-03-core-crm/main/default/objects/Contact/fields/PRAC_Supplier_Grading__c.field-meta.xml
<CustomField>
    <fullName>PRAC_Supplier_Grading__c</fullName>
    <label>Supplier Grading</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>E – Established</fullName>
            </value>
            <value>
                <fullName>N – New Supplier</fullName>
            </value>
            <value>
                <fullName>P – Price may inhibit regular use</fullName>
            </value>
            <value>
                <fullName>L – Limited confidence in supplier</fullName>
            </value>
            <value>
                <fullName>U – Unused</fullName>
            </value>
            <value>
                <fullName>S – Suspended</fullName>
            </value>
            <value>
                <fullName>X – Not to be used</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>