src-03-core-crm/main/default/objects/Contact/fields/PRAC_Supplier_Grading_Reason__c.field-meta.xml
<CustomField>
    <fullName>PRAC_Supplier_Grading_Reason__c</fullName>
    <label>Supplier Grading Reason</label>
    <type>TextArea</type>
</CustomField>