src-03-core-crm/main/default/objects/Contact/fields/PRAC_UKCP_Registered_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>PRAC_UKCP_Registered_Expiry_Date__c</fullName>
    <label>UKCP Registered Expiry Date</label>
    <type>Date</type>
</CustomField>