src-03-core-crm/main/default/objects/Contact/fields/PRAC_VAT_Registration_No__c.field-meta.xml
<CustomField>
    <fullName>PRAC_VAT_Registration_No__c</fullName>
    <label>VAT Registration No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>