src-03-core-crm/main/default/objects/Contact/fields/WAW_AF_Digital_CBT__c.field-meta.xml
<CustomField>
    <fullName>WAW_AF_Digital_CBT__c</fullName>
    <label>Digital CBT</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>