src-03-core-crm/main/default/objects/Contact/fields/WAW_AF_Face_to_Face_Counselling__c.field-meta.xml
<CustomField>
    <fullName>WAW_AF_Face_to_Face_Counselling__c</fullName>
    <label>Face to Face Counselling</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>