src-03-core-crm/main/default/objects/Contact/fields/WAW_AF_Telephone_Counselling__c.field-meta.xml
<CustomField>
    <fullName>WAW_AF_Telephone_Counselling__c</fullName>
    <label>Telephone Counselling</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>