src-03-core-crm/main/default/objects/Contact/fields/WAW_Affiliation_with_Company__c.field-meta.xml
<CustomField>
    <fullName>WAW_Affiliation_with_Company__c</fullName>
    <label>Affiliation with Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employee</fullName>
                <default>true</default>
                <label>Employee</label>
            </value>
            <value>
                <fullName>Member of Employee&apos;s Family</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>