src-03-core-crm/main/default/objects/Contact/fields/WaW_Client_Age__c.field-meta.xml
<CustomField>
    <fullName>WaW_Client_Age__c</fullName>
    <formula>Age__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WaW_Client_Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>