src-03-core-crm/main/default/objects/Contact/fields/WAW_Department_Division__c.field-meta.xml
<CustomField>
    <fullName>WAW_Department_Division__c</fullName>
    <label>Department / Division</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Culture, Tourism &amp; Sports (CTS)</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Harrogate Convention Centre</fullName>
            </value>
            <value>
                <fullName>Housing &amp; Property</fullName>
            </value>
            <value>
                <fullName>ICT</fullName>
            </value>
            <value>
                <fullName>Legal &amp; Governance</fullName>
            </value>
            <value>
                <fullName>Not Disclosed</fullName>
            </value>
            <value>
                <fullName>Office Based</fullName>
            </value>
            <value>
                <fullName>Operational</fullName>
            </value>
            <value>
                <fullName>Organisational Development &amp; Improvement (OD&amp;I)</fullName>
            </value>
            <value>
                <fullName>Parks and Environmental Services</fullName>
            </value>
            <value>
                <fullName>Planning &amp; Development</fullName>
            </value>
            <value>
                <fullName>Safer Communitites</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>