src-03-core-crm/main/default/objects/Contact/fields/WAW_Employee_Status__c.field-meta.xml
<CustomField>
    <fullName>WAW_Employee_Status__c</fullName>
    <label>Employee Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Time Employed</fullName>
            </value>
            <value>
                <fullName>Part Time Employed</fullName>
            </value>
            <value>
                <fullName>Member of Employee&apos;s Family</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>