src-03-core-crm/main/default/objects/Contact/fields/WAW_External_Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>WAW_External_Reference_ID__c</fullName>
    <externalId>true</externalId>
    <label>External Reference ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>