src-03-core-crm/main/default/objects/Contact/fields/WAW_Occupation_Type__c.field-meta.xml
<CustomField>
    <fullName>WAW_Occupation_Type__c</fullName>
    <label>Occupation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manager - middle</fullName>
            </value>
            <value>
                <fullName>Manager - senior</fullName>
            </value>
            <value>
                <fullName>Manager - team leader/supervisor</fullName>
            </value>
            <value>
                <fullName>Not disclosed</fullName>
            </value>
            <value>
                <fullName>Other - Front-line/customer facing</fullName>
            </value>
            <value>
                <fullName>Other - office based</fullName>
            </value>
            <value>
                <fullName>Other - operational</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>