src-03-core-crm/main/default/objects/Contact/recordTypes/Contract_Contact.recordType-meta.xml
<RecordType>
    <fullName>Contract_Contact</fullName>
    <active>true</active>
    <label>Contract Contact</label>
</RecordType>