src-03-core-crm/main/default/objects/Contact/recordTypes/Practitioner.recordType-meta.xml
<RecordType>
    <fullName>Practitioner</fullName>
    <active>true</active>
    <label>Practitioner</label>
</RecordType>