src-03-core-crm/main/default/objects/Contact/validationRules/Address_val.validationRule-meta.xml
<ValidationRule>
    <fullName>Address_val</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(MailingAddress)
&amp;&amp;RecordType.Name = &quot;WAW Client&quot;
&amp;&amp; $Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c</errorConditionFormula>
    <errorMessage>Address Information is required</errorMessage>
</ValidationRule>