src-03-core-crm/main/default/objects/Contact/validationRules/Contact_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Number</fullName>
    <active>true</active>
    <description>Ensures that at least 1 contact number is avalible for the client</description>
    <errorConditionFormula>AND(
RecordType.Name = &apos;Client&apos;,
HomePhone = &apos;&apos;,
MobilePhone = &apos;&apos;,
Work_Phone__c = &apos;&apos;)
&amp;&amp; $Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c</errorConditionFormula>
    <errorMessage>At least one contact number needs to be entered</errorMessage>
</ValidationRule>