src-03-core-crm/main/default/objects/Contact/validationRules/Disability_Val.validationRule-meta.xml
<ValidationRule>
    <fullName>Disability_Val</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(Disabilities__c),  Account.WAW_Disability__c )
&amp;&amp; RecordType.Name = &quot;WAW Client&quot;
&amp;&amp; $Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c</errorConditionFormula>
    <errorDisplayField>Disabilities__c</errorDisplayField>
    <errorMessage>Disability information is required on this contract</errorMessage>
</ValidationRule>