src-03-core-crm/main/default/objects/Contact/validationRules/Emergency_Info.validationRule-meta.xml
<ValidationRule>
    <fullName>Emergency_Info</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Emergency_Info_Declined__c = false,
RecordType.Name = &apos;WAW Client&apos;,
OR(Name_of_Next_of_Kin__c = &apos;&apos;,
Contact_number_of_Next_of_Kin__c = &apos;&apos;,
Name_of_Emergency_Contact__c = &apos;&apos;,
Contact_Number_of_Emergency_Contact__c = &apos;&apos;))
&amp;&amp;RecordType.Name &lt;&gt; &quot;Contract Contact&quot;
&amp;&amp; $Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c</errorConditionFormula>
    <errorMessage>Emergency and Next of Kin information must be filled in unless the client has declined</errorMessage>
</ValidationRule>