src-03-core-crm/main/default/objects/Contact/listViews/All_BWC_Clients.listView-meta.xml
<ListView>
    <fullName>All_BWC_Clients</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Number_of_Open_Cases__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.TITLE</field>
        <operation>notEqual</operation>
        <value>Advisor</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
        <value>Bank Workers Charity</value>
    </filters>
    <label>All BWC Clients</label>
</ListView>